--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 			<version>3.1.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.1.2</version>
+		</dependency>
 		<!--		Spring -->
 		<!--		Kotlin -->
 		<dependency>
@@ -52,6 +57,11 @@
 			<artifactId>kotlin-reflect</artifactId>
 			<version>1.9.0</version>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.aventrix.jnanoid</groupId>
+			<artifactId>jnanoid</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
