--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=123456
 #spring.datasource.password=$8!325&miD^iBd48egNW%yT3@g&xaJB9
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
