implements error handler; increments models, building some dummy models;

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
 			<version>5.2.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.ninja-squad</groupId>
+			<artifactId>springmockk</artifactId>
+			<version>4.0.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
