--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 # suppress inspection "UnusedProperty" for whole file
+# datasource
 spring.datasource.url=jdbc:mysql://localhost:3307/usersRestApi
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 #spring.datasource.password=$8!325&miD^iBd48egNW%yT3@g&xaJB9
+# jpa
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=create-drop
+# mysql
 #spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
